services/manifests/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: www.careerflow.shop
    http:
      paths:
      - path: /api/users/user
        pathType: Prefix
        backend:
          service:
            name: careerflow-user
            port:
              number: 3002
      - path: /api/users/admin
        pathType: Prefix
        backend:
          service:
            name: careerflow-user
            port:
              number: 3002
      - path: /api/users/company
        pathType: Prefix
        backend:
          service:
            name: careerflow-company
            port:
              number: 3003
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: careerflow-chat
            port:
              number: 3005
      - path: /
        pathType: Prefix
        backend:
          service:
            name: careerflow-client
            port:
              number: 5173
